objects/Confidential_Case_Team__c.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <formula>LEFT(TEXT(User__r.Business_Unit_BU__c), 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Confidential_Information__c</fullName>
        <label>Case Confidential Information</label>
        <referenceTo>Case_Confidential_Information__c</referenceTo>
        <relationshipLabel>Confidential Case Team</relationshipLabel>
        <relationshipName>Confidential_Case_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Confidential_Owner__c</fullName>
        <formula>CASESAFEID(Case_Confidential_Information__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Confidential Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>User__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <formula>TEXT(User__r.Product_Group_PG__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <formula>User__r.FirstName+&apos; &apos;+User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Confidential_Case_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Confidential Case Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CaseConfidTeam-{0000}</displayFormat>
        <label>Confidential Case Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confidential Case Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Owner_has_already_access</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
User__c = Case_Confidential_Information__r.OwnerId)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Owner has already access</errorMessage>
    </validationRules>
</CustomObject>